--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,8 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
+    width:100%;
+    height:auto;    
 }
 
 header {
@@ -9,6 +11,8 @@ header {
     color: white;
     padding: 10px 0;
     text-align: center;
+    width:100%;
+    height:auto;
 }
 
 nav ul {
